# predhinata_webapp

./: .gitignore  .pre-commit-config.yaml  README.md  README4DEVELOPER.md  compression_picture.py  main.py  make_model_by_sklearn.py  member_list.csv  member_list.py  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
.github/workflows/: main.yml
predhinata/: __init__.py  main.py
templates/: base.html  choose_img.html  index.html  result.html
templates/include/: header.html
