[tool.poetry]
name = "predhinata_webapp"
version = "0.1.0"
description = "predhinata web application"
authors = ["KAWAI Shun <shun@osstech.co.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8, <3.11"
numpy = "^1.21.5"
face-recognition = "^1.3.0"
Flask = "^2.0.2"
opencv-python = "^4.5.5"
python-dotenv = "^0.19.2"
Cython = "^0.29.26"
scikit-learn = "0.22.2.post1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
autoflake = "^1.4"
isort = "^5.10.1"
poethepoet = "^0.11.0"
pre-commit = "^2.16.0"
gunicorn = "^20.1.0"

[tool.poe.tasks.lint]
cmd = "flake8 predhinata/"

[tool.poe.tasks.format]
sequence = [
  { cmd = "autopep8 -ir predhinata/" },
  { cmd = "autoflake -ir --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports predhinata/" },
  { cmd = "isort predhinata/" }
]

[tool.poe.tasks.runserver]
cmd = "gunicorn -c etc/gunicorn.conf.py predhinata.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
