[tool.poetry]
name = "predhinata_webapp"
version = "0.1.0"
description = "predhinata web application"
authors = ["KAWAI Shun <shun@osstech.co.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8, <3.11"
numpy = "^1.21.5"
face-recognition = "^1.3.0"
Flask = "^2.0.2"
opencv-python = "^4.5.5"
python-dotenv = "^0.19.2"
Cython = "^0.29.26"
scikit-learn = "0.22.2.post1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"
poethepoet = "^0.11.0"
pre-commit = "^2.16.0"
gunicorn = "^20.1.0"
black = "^21.12b0"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.poe.tasks.lint]
cmd = "pflake8 predhinata/"

[tool.poe.tasks.format]
sequence = [
  { cmd = "autoflake -ir --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports predhinata/" },
  { cmd = "isort predhinata/" },
  { cmd = "black predhinata/" }
]

[tool.poe.tasks.runserver]
cmd = "gunicorn -c etc/gunicorn.conf.py predhinata.main:app"

[tool.flake8]
max-line-length = 88
ignore = "E203,W503,W504"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
